--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-Hydrogen
+theme: jekyll-theme-cayman
 title: Huanqius-blog
 author: Huanqiu
 description: just-something-to-talk
