--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
-title: Huanqius-blog
+title: Huanqiu的博客
 author: Huanqiu
-description: just-something-to-talk
+description: 说点什么……
 keywords: "blog"
 baseurl: 
 url: huanqiugame.github.io
