--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: Huanqiu的博客
 author: Huanqiu
-description: 说点什么……
+description: 感谢有你。
 keywords: "blog"
 baseurl: 
 url: huanqiugame.github.io
